[gd_scene load_steps=2 format=3 uid="uid://dqr6kh7mll6ru"]

[ext_resource type="Script" path="res://Scenes/Other/SystemChoice.gd" id="1_agc0u"]

[node name="SystemChoice" type="Node2D"]
z_index = 99
position = Vector2(1005, 532)
script = ExtResource("1_agc0u")

[node name="PopupPanel" type="PopupPanel" parent="."]
initial_position = 2
size = Vector2i(500, 140)
visible = true

[node name="MarginContainer" type="MarginContainer" parent="PopupPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 496.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="popuptext" type="Label" parent="PopupPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "TEXT GOES HERE"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="LeftButton" type="Button" parent="PopupPanel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "OK"

[node name="RightButton" type="Button" parent="PopupPanel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "OK"

[connection signal="pressed" from="PopupPanel/MarginContainer/VBoxContainer/HBoxContainer/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="PopupPanel/MarginContainer/VBoxContainer/HBoxContainer/RightButton" to="." method="_on_right_button_pressed"]
